# BanksConnectApp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  audit_report.md  main.cpp
deploy/: nginx.conf
src/: acc.cc  acc.h  acc_invest.cc  acc_invest.h  app_server.cc  app_server.h  database.cc  database.h  enablebanking_client.cc  enablebanking_client.h  json_mapper.cc  json_mapper.h  trans.h  webhook_server.cc  webhook_server.h
